Сделан POST запрос

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           >
             <input type="text" id="name" placeholder="Имя" />
             <input type="text" id="age" placeholder="Возраст" />
-            <input type="text" id="genger" placeholder="Пол" />
+            <input type="text" id="gender" placeholder="Пол" />
             <input type="submit" value="Добавить" class="button-submit" />
           </form>
 
