И вновь продолжается бой

--- a/index.html
+++ b/index.html
@@ -15,19 +15,14 @@
   <body>
     <main class="wrapper">
       <form class="form">
-        <input
-          type="text"
-          id="name"
-          placeholder="Имя"
-          class="form__name-of-cat"
-        />
+        <input type="text" id="name" placeholder="Имя" class="form__cat-name" />
         <input
           type="text"
           id="age"
           placeholder="Возраст"
-          class="form__age-of-cat"
+          class="form__cat-age"
         />
-        <select name="select" id="gender" class="form__gender-of-cats">
+        <select name="select" id="gender" class="form__cat-gender">
           <option value="female">Девочка</option>
           <option value="male">Мальчик</option>
         </select>
