--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <link href="style.css" rel="stylesheet" />
@@ -17,7 +17,7 @@
       <form class="form">
         <input type="text" id="name" placeholder="Имя" class="form__cat-name" />
         <input
-          type="text"
+          type="number"
           id="age"
           placeholder="Возраст"
           class="form__cat-age"
